<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.InfoActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/ic_note_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/ic_note_background">

                <TextView
                    android:id="@+id/tvIam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="Hi, I am"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvMyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/my_name"
                    android:textColor="@color/green"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvIam" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/tvMyName">

                    <TextView
                        style="@style/text_view"
                        android:text="@string/text_1" />

                    <TextView
                        style="@style/text_view"
                        android:text="@string/text_2" />

                    <TextView
                        style="@style/text_view"
                        android:text="@string/text_3" />

                    <TextView
                        style="@style/text_view"
                        android:text="@string/text_4" />

                    <TextView
                        style="@style/text_view"
                        android:text="@string/text_5" />

                    <TextView
                        style="@style/text_view"
                        android:text="@string/text_6" />

                    <TextView
                        style="@style/text_view"
                        android:text="@string/text_7" />

                    <TextView
                        style="@style/text_view"
                        android:text="@string/text_8" />

                    <TextView
                        style="@style/text_view"
                        android:layout_marginTop="15dp"
                        android:text="@string/text_9"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/text_view"
                        android:layout_marginTop="15dp"
                        android:text="@string/contact_me"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imMyTg"
                            style="@style/image_view"
                            android:layout_marginStart="25dp"
                            android:src="@drawable/telegram_icon" />

                        <ImageView
                            android:id="@+id/imMyInsta"
                            style="@style/image_view"
                            android:layout_marginStart="25dp"
                            android:src="@drawable/instagram_icon"
                            android:visibility="invisible" />

                        <ImageView
                            android:id="@+id/imMyYoutube"
                            style="@style/image_view"
                            android:layout_marginStart="25dp"
                            android:src="@drawable/youtube_icon"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <TextView
                        style="@style/text_view"
                        android:text="@string/contact_gita"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imGitaTg"
                            style="@style/image_view"
                            android:src="@drawable/telegram_icon" />

                        <ImageView
                            android:id="@+id/imGitaInsta"
                            style="@style/image_view"
                            android:src="@drawable/instagram_icon" />

                        <ImageView
                            android:id="@+id/imGitaYoutube"
                            style="@style/image_view"
                            android:src="@drawable/youtube_icon" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>